chore(tabs): tabs nav correct alignment (#2149)
* chore(tabs): tabs nav correct alignment

* chore(devenv): update tabs breakpoint

* chore(tabs): remove unnecessary breakpoint

* chore(test): fix redundant line introduced in recent commit

* test(ui-shell): temporary disable navigation focus test

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -306,18 +306,12 @@
 
     @include carbon--breakpoint(md) {
       flex-direction: row;
-      margin-right: $carbon--spacing-05;
-      margin-left: $carbon--spacing-05;
       background: none;
       box-shadow: none;
       z-index: auto;
       transition: inherit;
       max-height: auto;
       width: auto;
-    }
-
-    @include carbon--breakpoint(xlg) {
-      margin-left: 0;
     }
   }
 
